<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#8000"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/profile_settings"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/bChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/regular"
            android:text="@string/change_email"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/regular"
            android:text="@string/change_password"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bDeleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/regular"
            android:text="@string/delete_user"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>