<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#8000"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext_icon"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:fontFamily="@font/regular"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/warning"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/cbWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:buttonTint="@color/orange" />

        </LinearLayout>


        <Button
            android:id="@+id/bDeleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/orange"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"/>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>