<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/freddo_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/freddo_logo" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/freddo_logo"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#8000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="25dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/light"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_profile"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/regular"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/light"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/orange">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bg_edittext_icon"
                        android:drawableStart="@drawable/ic_password"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/regular"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/bLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/roundedbutton"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/regular"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/cbStayLoggedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/orange"
                    android:text="@string/stayloggedin"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>